# tradesensei

./: .replit  app.py  app.py.bak  erslenovoDownloadsTradeSensei_modified  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
pages/: 1_📈_Market_Dashboard.py  2_🔍_Stock_Screener.py  3_📊_Portfolio_Tracker.py  4_🤖_AI_Analysis.py  5_📧_Reports_Settings.py  login.py
style/: style.css  theme.css
utils/: __init__.py  ai_analysis.py  fundamentals.py  load_css.py  market_data.py  news_scraper.py  notifications.py  portfolio.py  scheduler.py  screener.py
