[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "twilio>=9.7.0",
    "yfinance>=0.2.65",
]
